Object delete button, code indentation(canvas, index), split style from html(canvas)

--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
                                     <td class='list-value object-scale'>none</td>
                                 </tr>
                             </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td>
+                                        <button id="delete-btn">Delete</button>
+                                    </td>
+                                </tr>
+                            </tfoot>
                     </div>
                     <!--/.well -->
                 </div>
