--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                     <div class="well">
                         <ul class="nav">
                             <li class="nav-header">Shape</li>
-                            <li class="active" onclick="createPrimitive('box')"><a>Box</a></li>
-                            <li onclick="createPrimitive('sphere')"><a>Sphere</a></li>
-                            <li onclick="createPrimitive('cylinder')"><a>Cylinder</a></li>
-                            <li onclick="createPrimitive('plane')"><a>Plane</a></li>
+                            <li class="active" onclick="create('box')"><a>Box</a></li>
+                            <li onclick="create('sphere')"><a>Sphere</a></li>
+                            <li onclick="create('cylinder')"><a>Cylinder</a></li>
+                            <li onclick="create('plane')"><a>Plane</a></li>
                             </li>
                             <li class="nav-header">Primitive</li>
-                            <li class="active" onclick="createPrimitive('image')"><a>Image</a></li>
-                            <li onclick="createPrimitive('teleport')"><a>Teleport</a></li>
+                            <li class="active" onclick="create('image')"><a>Image</a></li>
+                            <li onclick="create('teleport')"><a>Teleport</a></li>
                             </li>
                         </ul>
                     </div>
