--- a/static/html/canvas.html
+++ b/static/html/canvas.html
@@ -17,7 +17,7 @@
         <!-- BACKGROUND -->
         <a-sky src="../img/puydesancy.jpg"></a-sky>
         <!-- CAMERA -->
-        <a-entity camera look-controls>
+        <a-entity background-listener camera look-controls>
             <a-entity cursor="fuse: false" position="0 0 -1" geometry="primitive: ring; radius-inner: 0.01; radius-outer: 0.02" material="color: red; shader: flat"></a-entity>
         </a-entity>
     </a-scene>
