--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta name="google" content="notranslate" />
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <script type="text/javascript" src="static/js/jquery-3.1.1.min.js"></script>
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <script type="text/javascript" src="static/js/bundle.js"></script>
     <link rel="stylesheet" type="text/css" href="static/css/editor.css">
 </head>
@@ -28,6 +30,11 @@
                     <li><a href="#contact">Contact</a>
                     </li>
                 </ul>
+                <div class="navbar-right">
+                    <label class="checkbox-inline">
+                        <input id="toggle-event" type="checkbox" data-toggle="toggle"> Editor Mode
+                    </label>
+                </div>
             </div>
             <!--/.navbar-collapse -->
         </div>
