--- a/static/html/canvas.html
+++ b/static/html/canvas.html
@@ -4,7 +4,7 @@
 <head>
     <title>Test A-Frame</title>
     <script type="text/javascript" src="../js/aframe.min.js"></script>
-    <!-- <script type="text/javascript" src="../../src/canvas.js"></script> -->
+    <script type="text/javascript" src="https://rawgit.com/mayognaise/aframe-mouse-cursor-component/master/dist/aframe-mouse-cursor-component.min.js"></script>
     <style type="text/css">
     body {
         border: 0;
@@ -17,14 +17,12 @@
         <!-- BACKGROUND -->
         <a-sky src="../img/puydesancy.jpg"></a-sky>
         <!-- CAMERA -->
-        <a-entity background-listener camera look-controls>
-            <a-entity cursor="fuse: false" position="0 0 -1" geometry="primitive: ring; radius-inner: 0.01; radius-outer: 0.02" material="color: red; shader: flat"></a-entity>
+        <a-entity camera look-controls mouse-cursor>
         </a-entity>
     </a-scene>
     <script type="text/javascript">
-    window.onload = function(){
+    window.onload = function() {
         window.parent.onLoadCanvas(this);
-        // console.log(this);
     }
     </script>
 </body>
