Event binding to object click(non editor mode)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="static/js/jquery-3.1.1.min.js"></script>
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <script type="text/javascript" src="static/js/bundle.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="static/css/editor.css">
 </head>
 
@@ -102,6 +103,33 @@
                                     </td>
                                 </tr>
                             </tfoot>
+                        </table>
+                    </div>
+                    <!--/.well -->
+                    <div class="well">
+                        <table class="nav object-list">
+                            <thead>
+                                <h4>Events</h4>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class='list-value object-id'>
+                                        <div class="dropdown">
+                                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+                                                <span class="caret"></span></button>
+                                            <ul class="dropdown-menu">
+                                            </ul>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td>
+                                    </td>
+                                </tr>
+                            </tfoot>
+                        </table>
                     </div>
                     <!--/.well -->
                 </div>
