Simple teleport(image change)

--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@
                                         </div>
                                     </td>
                                 </tr>
+                                <tr>
+                                    <td>
+                                        <input id="eventArg" type="text" name="">
+                                    </td>
+                                </tr>
                             </tbody>
                             <tfoot>
                                 <tr>
