Save and load from json

--- a/index.html
+++ b/index.html
@@ -136,6 +136,27 @@
                             </tfoot>
                         </table>
                     </div>
+                    <div class="well">
+                        <table class="nav object-list">
+                            <thead>
+                                <h4>Loads</h4>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <input id="loadInput" type="text" name="">
+                                        <button id="loadBtn">Load</button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <td>
+                                    </td>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
                     <!--/.well -->
                 </div>
                 <!--/sidebar-nav-fixed -->
