--- a/static/html/canvas.html
+++ b/static/html/canvas.html
@@ -4,7 +4,8 @@
 <head>
     <title>Test A-Frame</title>
     <script type="text/javascript" src="../js/aframe.min.js"></script>
-    <script type="text/javascript" src="https://rawgit.com/mayognaise/aframe-mouse-cursor-component/master/dist/aframe-mouse-cursor-component.min.js"></script>
+    <!-- <script type="text/javascript" src="https://rawgit.com/mayognaise/aframe-mouse-cursor-component/master/dist/aframe-mouse-cursor-component.min.js"></script> -->
+    <script type="text/javascript" src="../js/aframe-mouse-cursor-component.js"></script>
     <style type="text/css">
     body {
         border: 0;
@@ -13,16 +14,26 @@
 </head>
 
 <body>
+    <!-- <a-scene onmousemove="onMouseMove(event)"> -->
     <a-scene>
         <!-- BACKGROUND -->
         <a-sky src="../img/puydesancy.jpg"></a-sky>
         <!-- CAMERA -->
         <a-entity camera look-controls mouse-cursor>
         </a-entity>
+        <a-box id="testbox" position="0 0 -6" material="color:#123466">
+            <a-plane id="left" position="-0.26 0 1" scale="0.1 0.4 1" material="color:#000000"></a-plane>
+            <a-plane id="right" position="0.26 0 1" scale="0.1 0.4 1" material="color:#000000"></a-plane>
+            <a-plane id="top" position="0 0.26 1" scale="0.4 0.1 1" material="color:#000000"></a-plane>
+            <a-plane id="bottom" position="0 -0.26 1" scale="0.4 0.1 1" material="color:#000000"></a-plane>
+        </a-box>
     </a-scene>
     <script type="text/javascript">
     window.onload = function() {
         window.parent.onLoadCanvas(this);
+    }
+    function onMouseMove(evt) {
+        window.parent.onMouseMove(evt);
     }
     </script>
 </body>
