Add save button

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                                 <tr>
                                     <td>
                                         <input id="loadInput" type="text" name="">
+                                        <button id="saveBtn">Save</button>
                                         <button id="loadBtn">Load</button>
                                     </td>
                                 </tr>
