--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                             <li class="nav-header">Primitive</li>
                             <li class="active" onclick="create('image')"><a>Image</a></li>
                             <li onclick="create('teleport')"><a>Teleport</a></li>
+                            <li onclick="setMiniMap()"><a>minimap</a></li>
                             </li>
                         </ul>
                     </div>
