--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="navbar navbar-fixed-top navbar-default">
         <div class="container">
-            <div class="navbar-header"><a class="navbar-brand" href="#">Project name</a>
+            <div class="navbar-header"><a class="navbar-brand" href="#">Traversal360</a>
                 <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="glyphicon glyphicon-bar"></span>
                     <span class="glyphicon glyphicon-bar"></span>
@@ -24,11 +24,7 @@
             </div>
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a>
-                    </li>
-                    <li><a href="#about">About</a>
-                    </li>
-                    <li><a href="#contact">Contact</a>
+                    <li class="active"><a href="#">Editor</a>
                     </li>
                 </ul>
                 <div class="navbar-right">
