condition prototype, modify minimap position

--- a/static/html/canvas.html
+++ b/static/html/canvas.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a-scene>
+    <a-scene> <!--vr-mode-ui="enabled: false">-->
         <!-- BACKGROUND -->
         <a-sky src="../img/puydesancy.jpg"></a-sky>
         <!-- CAMERA -->
