update uploaded image’s filename

--- a/static/html/canvas.html
+++ b/static/html/canvas.html
@@ -16,7 +16,7 @@
 <body>
     <a-scene> <!--vr-mode-ui="enabled: false">-->
         <!-- BACKGROUND -->
-        <a-sky src="../img/puydesancy.jpg"></a-sky>
+        <a-sky></a-sky>
         <!-- CAMERA -->
         <a-entity id="camera" camera look-controls mouse-cursor>
         </a-entity>
