--- a/static/html/canvas.html
+++ b/static/html/canvas.html
@@ -16,7 +16,10 @@
 <body>
     <a-scene> <!--vr-mode-ui="enabled: false">-->
         <!-- BACKGROUND -->
-        <a-sky></a-sky>
+        <a-sky id="background">
+            <a-animation attribute="material.color" begin="fade-out" from="white" to="black" dur="2000"></a-animation>
+            <a-animation attribute="material.color" begin="fade-in" from="black" to="white" dur="2000"></a-animation>
+        </a-sky>
         <!-- CAMERA -->
         <a-entity id="camera" camera look-controls mouse-cursor>
         </a-entity>
