Multiple bg images and simple geometry

--- a/static/html/canvas.html
+++ b/static/html/canvas.html
@@ -23,7 +23,7 @@
         <!-- CAMERA -->
         <a-entity id="camera" camera look-controls mouse-cursor>
         </a-entity>
-    </a-scene>
+    </a-scene vr-mode-ui="enabled: false">
     <script type="text/javascript">
     window.onload = function() {
         window.parent.onLoadCanvas(this);
