Remove mover and enable BOOST MOVE MODE

--- a/static/html/canvas.html
+++ b/static/html/canvas.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <a-scene> <!--vr-mode-ui="enabled: false">-->
+    <a-scene vr-mode-ui="enabled: false">
         <!-- BACKGROUND -->
         <a-sky id="background">
             <a-animation attribute="material.color" begin="fade-out" from="white" to="black" dur="2000"></a-animation>
