--- a/static/html/editor.html
+++ b/static/html/editor.html
@@ -7,271 +7,17 @@
     <link rel="shortcut icon" href="../static/img/favico.ico" type="image/x-icon">
     <link href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,300,500,900" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css" media="all" />
-    <!-- <link rel="stylesheet" href="../css/theme.css" type="text/css" media="all" /> -->
-    <link rel="stylesheet" href="../css/responsive.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="../css/custom.css" type="text/css" media="all" />
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" media="all" />
+    <!-- <link rel="stylesheet" type="text/css" href="../css/theme.css"  media="all" /> -->
+    <link rel="stylesheet" type="text/css" href="../css/responsive.css" media="all" />
+    <link rel="stylesheet" type="text/css" href="../css/custom.css" media="all" />
+    <link rel="stylesheet" type="text/css" href="../css/editor.css">
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/bundle.js"></script>
     <style>
-    body,
-    html {
-        height: 95%;
-        padding: 0;
-    }
 
-    #adjust-button {
-        width: 25px;
-        height: 25px;
-        float: left;
-        position: absolute;
-        top: 28px;
-        right: 35px;
-        background-size: 100% 100%;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-image: url(../img/adjust_icon.png);
-        border-color: #ffffff;
-    }
-
-    #remove-button {
-        top: 28px;
-        right: 70px;
-        width: 25px;
-        height: 25px;
-        float: right;
-        position: absolute;
-        background-size: 100% 100%;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-image: url(../img/delete_icon.png);
-        border-color: #ffffff;
-    }
-
-    #hidden-adjust-button {
-        width: 25px;
-        height: 25px;
-        float: left;
-        position: absolute;
-        top: 48px;
-        right: 35px;
-        background-size: 100% 100%;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-image: url(../img/adjust_icon.png);
-        border-color: #ffffff;
-    }
-
-    #hidden-remove-button {
-        top: 48px;
-        right: 70px;
-        width: 25px;
-        height: 25px;
-        float: right;
-        position: absolute;
-        background-size: 100% 100%;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-image: url(../img/delete_icon.png);
-        border-color: #ffffff;
-    }
-
-    #simri-panel-image {
-        width: 280px;
-        height: 250px;
-        position: fixed;
-        background-size: 100% 100%;
-        background-image: url('../img/bg_input.png')
-    }
-
-
-    #simri-panel-end-image {
-        width: 280px;
-        height: 250px;
-        position: fixed;
-        background-size: 100% 100%;
-        background-image: url('../img/popup_end.png')
-    }
-
-    #hidenseek-panel-image {
-        width: 280px;
-        height: 250px;
-        position: fixed;
-        background-size: 100% 100%;
-        background-image: url('../img/popup_spot.png')
-    }
-
-    .object-panel {
-        width: 300px;
-        height: 300px;
-        /*border-radius: 1%;*/
-        position: fixed;
-        top: 100px;
-        left: 100px;
-        /*box-shadow: 0px 2px 5px #666;*/
-        z-index: 1;
-        background: rgba(0, 0, 0, 0);
-    }
-
-    .panel-floating {
-        height: 60px;
-        margin-bottom: 10px;
-        margin-right: 0px;
-        z-index: 1;
-        cursor: pointer;
-        text-align: center;
-    }
-
-    .panel-floating-inside {
-        display: inline-flex;
-        align-items: center;
-        padding: 5px;
-        height: 100%;
-    }
-
-    .header-item {
-        width: 100px;
-        height: 50px;
-        align-items: center;
-        cursor: pointer;
-    }
-
-    .header-span {
-        margin: auto;
-    }
-
-    .navbar-header {
-        width: 48px;
-        height: 48px;
-        background-size: 100% 100%;
-        background-image: url('../img/editor_logo.png')
-    }
-
-    #floating-button {
-        width: 65px;
-        height: 65px;
-        border-radius: 50%;
-        position: fixed;
-        top: 150px;
-        left: 20px;
-        cursor: pointer;
-        z-index: 2;
-        background-size: 100% 100%;
-        background-image: url('../img/editor_icon_mouseout.png')
-    }
-
-    #floating-button:hover {
-        background-size: 100% 100%;
-        background-image: url('../img/editor_icon_mouseon.png')
-    }
-
-    #floating-panel {
-        border-radius: 15px;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        padding-left: 10px;
-        padding-right: 10px;
-        width: 220px;
-        height: auto;
-        position: fixed;
-        top: 145px;
-        left: 85px;
-        z-index: 1;
-        background-color: #3795f3;
-        box-shadow: 1px 1px 40px #000000;
-    }
-
-    .floating-panel-item+.floating-panel-item {
-        margin-top: 15px;
-    }
-
-    .floating-panel-item {
-        text-align: center;
-        color: white;
-        font-size: 25px;
-        /*font-style: bold;*/
-    }
-
-    .floating-panel-item:hover {
-        text-align: center;
-        color: white;
-        font-size: 25px;
-        font-style: bold;
-        background-color: #000000;
-    }
-
-    #container {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        margin: 0;
-        padding: 0;
-    }
-
-    #main-canvas {
-        padding: 10px;
-        width: 100%;
-        height: 100%;
-    }
-
-    #hidenseek-clock {
-        background-size: 100% 100%;
-        background-image: url(../img/template/icon_time_final.png);
-        z-index: 1;
-        position: fixed;
-        width: 200px;
-        height: 200px;
-        right: 10px;
-    }
-
-    .thumbnail-controller form {
-        display: table;
-    }
-
-    .thumbnail-controller p {
-        display: table-row;
-    }
-
-    .thumbnail-controller label {
-        display: table-cell;
-    }
-
-    .thumbnail-controller input {
-        display: table-cell;
-    }
-
-    input[type="range"] {
-        position: relative;
-    }
-
-    input[type="range"]:before {
-        position: absolute;
-        top: -17px;
-        left: 50%;
-        margin-left: -10px;
-        content: attr(value);
-        display: block;
-        text-align: center;
-        width: 20px;
-        height: 10px;
-    }
-
-    .image-upload>input {
-        display: none;
-    }
-
-    .image-upload img {
-        width: 70px;
-        height: 30px;
-        cursor: pointer;
-    }
-    /*
-  .modal-content{
-    background-size: 100% 100%;
-    background-image:url('../img/editor_modal_bg.png')
-  }*/
     </style>
 </head>
 
@@ -455,65 +201,6 @@ $(document).ready(function() {
         $("#image_file").prop('disabled', false);
     });
 
-    $('#image_form').submit(function() {
-        if (imageFlag == FLAG_IMAGE) {
-            // $(this).attr('action', "/project/<%= sceneID %>/image");
-        } else if (imageFlag == FLAG_BACKGROUND) {
-            // $(this).attr('action', "/project/<%= sceneID %>/background");
-        } else {
-            return;
-        }
-
-        $("#uploader_iframe").unbind().on('load', function() { // This block of code will execute when the response is sent from the server.
-            console.log(this)
-            // result = JSON.parse($(this).contents().text()); // Content of the iframe will be the response sent from the server. Parse the response as the JSON object
-            // if (imageFlag == FLAG_IMAGE) {
-            //     createImage(result.result);
-            // } else if (imageFlag == FLAG_BACKGROUND) {
-            //     setBackground(result.result);
-            // }
-            // resetForm();
-        });
-    });
-
-    $("#simri-option-form").submit(function() {
-
-        $("#uploader_iframe").unbind().on('load', function() { // This block of code will execute when the response is sent from the server.
-            result = JSON.parse($(this).contents().text()); // Content of the iframe will be the response sent from the server. Parse the response as the JSON object
-            modifyOption($("#simri-option-text").val(), result.result, $("#simri-option-score").val());
-            $("#simri-option-panel").css("display", "none");
-            $("#simri-option-file").val("");
-        });
-    });
-
-    $("#simri-result-form").submit(function() {
-        if (uploadResultImage == 1 && uploadResultBackground == 1) {
-            // $("#simri-result-form").attr('action', "/project/<%= sceneID %>/simri");
-        } else {
-            // $("#simri-result-form").attr('action', "/project/<%= sceneID %>/image");
-        }
-
-        $("#uploader_iframe").unbind().on('load', function() { // This block of code will execute when the response is sent from the server.
-            result = JSON.parse($(this).contents().text()); // Content of the iframe will be the response sent from the server. Parse the response as the JSON object
-            if (uploadResultImage == 1 && uploadResultBackground == 1) {
-                modifyResult($("#simri-result-text").val(), result.image, $("#simri-result-score").val(), result.background);
-            } else if (uploadResultImage == 1 && uploadResultBackground == 0) {
-                modifyResult($("#simri-result-text").val(), result.result, $("#simri-result-score").val(), getResultBackgroundUrl());
-            } else {
-                modifyResult($("#simri-result-text").val(), getCurrentImgUrl(), $("#simri-result-score").val(), result.result);
-            }
-            resetResultPanel();
-        });
-    });
-
-    $("#hidden-seek-form").submit(function() {
-        $("#uploader_iframe").unbind().on('load', function() { // This block of code will execute when the response is sent from the server.
-            result = JSON.parse($(this).contents().text()); // Content of the iframe will be the response sent from the server. Parse the response as the JSON object
-            modifySpot($("#simri-option-text").val(), result.result, $("#simri-option-score").val());
-            $("#hidenseek-panel").css("display", "none");
-        });
-    });
-
     $('#thumbnail_form').submit(function() {
         if (imageFlag == FLAG_THUMBNAIL) {
             // get the canvas image data
@@ -535,54 +222,6 @@ $(document).ready(function() {
     });
 });
 
-function resetResultPanel() {
-    $("#simri-result-panel").css("display", "none");
-    $("#result-back-file").val("");
-    $("#simri-result-file").val("");
-    uploadResultImage = 0;
-    uploadResultBackground = 0;
-}
-
-function submitPanel(type) {
-    if (type == 'option') {
-        if ($('#simri-option-file').get(0).files.length == 0) {
-            modifyOption($("#simri-option-text").val(), getCurrentImgUrl(), $("#simri-option-score").val());
-            $("#simri-option-panel").css("display", "none");
-            return;
-        }
-        $("#simri-option-form").submit();
-        return;
-    }
-    if (type == 'result') {
-        if ($('#simri-result-file').get(0).files.length == 0 && $('#result-back-file').get(0).files.length == 0) {
-            // 둘다  현재껄로
-            modifyResult($("#simri-result-text").val(), getCurrentImgUrl(), $("#simri-result-score").val(), getResultBackgroundUrl());
-            resetResultPanel();
-            return;
-        }
-
-        if ($('#simri-result-file').get(0).files.length == 0 && $('#result-back-file').get(0).files.length != 0) {
-            // 이미지는 원래 있던걸로, 배경은 업로드
-            uploadResultBackground = 1;
-            uploadResultImage = 0;
-        } else if ($('#simri-result-file').get(0).files.length != 0 && $('#result-back-file').get(0).files.length == 0) {
-            // 이미지는 업로드, 배경은 있던걸로
-            uploadResultBackground = 0;
-            uploadResultImage = 1;
-        } else {
-            // 둘다 업로드
-            uploadResultBackground = 1;
-            uploadResultImage = 1;
-        }
-        $("#simri-result-form").submit();
-        return;
-    }
-    if (type == 'hidden') {
-        $("#simri-hidden-form").submit();
-        return;
-    }
-}
-
 function openMenu() {
     if ($("#floating-panel").css("display") == "none") {
         $("#floating-panel").css("display", "");
@@ -594,7 +233,7 @@ function openMenu() {
 }
 
 function getJson() {
-    if(!loadProject()){
+    if (!loadProject()) {
         getBackgroundPopup();
     }
     nothumbnail = true;
@@ -657,7 +296,7 @@ function updateImageDisplay() {
             image.id = "uploaded_image";
             image.hidden = true;
             document.body.appendChild(image);
-        } 
+        }
     }
 }
 
